--- a/src/NightSnake/NightSnackConfig.json
+++ b/src/NightSnake/NightSnackConfig.json
@@ -1,12 +1,14 @@
 {
-  "Version": "1.3.1",
-  "ConfigFolderName": "NightSnackConfig",
-  "ConfigName": "NightSnackConfig.json",
-  "ConfigPath": null,
+  "version": "1.3.1",
+  "configFolderName": "NightSnackConfig",
+  "configName": "NightSnackConfig.json",
+  "configPath": "L:\\Codes\\Python\\LeteNightSnakeRandomMachine\\src\\NightSnake",
   "YuanShenPath": null,
   "GenshinImpactPath": null,
   "GenshinImpactStart": false,
   "openCheat": false,
+  "WindowsName": "Windows",
+  "otherOS": "Gnu/Linux or MacOS",
   "Statement": {
     "canEatSnake": [
       "\u4eca\u665a\u5403\u591c\u5bb5\u55b5~",
