增加了作弊配置的检查，防止引发冲突

--- a/src/NightSnack/NightSnackConfig/NightSnackConfig.json
+++ b/src/NightSnack/NightSnackConfig/NightSnackConfig.json
@@ -17,11 +17,11 @@
   ],
   "GenshinImpactName": [
     "YuanShen.exe",
-    "GenshinImpact.exe"
+    "GenshinImpact.txt"
   ],
   "openCheat": {
     "alwaysEat": false,
-    "neverEat": true
+    "neverEat": false
   },
   "statement": {
     "canEatSnake": {
