修复了打印时出现字符间换行符的问题
然后发现了LocalConfig和DefaultConfig的使用混乱...
虽然现在没什么问题，因为在第一次初始化后两个方法返回的值都是一样的

--- a/src/NightSnack/NightSnackConfig/NightSnackConfig.json
+++ b/src/NightSnack/NightSnackConfig/NightSnackConfig.json
@@ -17,7 +17,7 @@
   ],
   "GenshinImpactName": [
     "YuanShen.exe",
-    "GenshinImpact.txt"
+    "GenshinImpact.exe"
   ],
   "openCheat": {
     "alwaysEat": false,
