--- a/src/NightSnack/NightSnackConfig/NightSnackConfig.json
+++ b/src/NightSnack/NightSnackConfig/NightSnackConfig.json
@@ -36,5 +36,6 @@
   "HelpString": {
     "ChangeSetting": "You can Change the Config at L:\\Codes\\Python\\LeteNightSnakeRandomMachine\\src\\NightSnack\\NightSnackConfig\\NightSnackConfig.json",
     "Cheat": "Remember NEVER SET ALL TO TRUE"
-  }
+  },
+  "startTimes": 130
 }
