--- a/src/NightSnack/NightSnackConfig/NightSnackConfig.json
+++ b/src/NightSnack/NightSnackConfig/NightSnackConfig.json
@@ -1,15 +1,16 @@
 {
   "version": "1.4.0",
-  "configFolderName": "NightSnackConfig",
   "configName": "NightSnackConfig.json",
+  "configFolderName": "NightSnackConfig",
   "configPath": "L:\\Codes\\Python\\LeteNightSnakeRandomMachine\\src\\NightSnack",
   "YuanShenPath": null,
-  "GenshinImpactPath": "G:Genshin Impact\\Genshin Impact Game\\YuanShen.exe",
-  "GenshinImpactStart": true,
-  "openGenshinImpactUrl": true,
-  "openCloudGenshinImpactUrl": true,
+  "GenshinImpactPath": null,
+  "GenshinImpactStart": false,
+  "openGenshinImpactUrl": false,
+  "openCloudGenshinImpactUrl": false,
   "GenshinImpactUrl": "https://ys.mihoyo.com/",
   "cloudGenshinImpactUrl": "https://ys.mihoyo.com/cloud/?utm_source=default#/",
+  "startTimes": 178,
   "Author": [
     "Copilot",
     "ChatGpt",
@@ -36,6 +37,5 @@
   "HelpString": {
     "ChangeSetting": "You can Change the Config at L:\\Codes\\Python\\LeteNightSnakeRandomMachine\\src\\NightSnack\\NightSnackConfig\\NightSnackConfig.json",
     "Cheat": "Remember NEVER SET ALL TO TRUE"
-  },
-  "startTimes": 810
+  }
 }
