对启动函数进行处理，使其先对文件路径进行判断，若为空或者一个错误的值则重新搜索，并且适配了popen的异常处理

--- a/src/NightSnack/NightSnackConfig/NightSnackConfig.json
+++ b/src/NightSnack/NightSnackConfig/NightSnackConfig.json
@@ -4,13 +4,13 @@
   "configFolderName": "NightSnackConfig",
   "configPath": "L:\\Codes\\Python\\LeteNightSnakeRandomMachine\\src\\NightSnack",
   "YuanShenPath": null,
-  "GenshinImpactPath": null,
-  "GenshinImpactStart": false,
-  "openGenshinImpactUrl": false,
-  "openCloudGenshinImpactUrl": false,
+  "GenshinImpactPath": "G:Genshin Impact\\Genshin Impact Game\\YuanShen.exe",
+  "GenshinImpactStart": true,
+  "openGenshinImpactUrl": true,
+  "openCloudGenshinImpactUrl": true,
   "GenshinImpactUrl": "https://ys.mihoyo.com/",
   "cloudGenshinImpactUrl": "https://ys.mihoyo.com/cloud/?utm_source=default#/",
-  "startTimes": 178,
+  "startTimes": 5744,
   "Author": [
     "Copilot",
     "ChatGpt",
